$Id: History,v 1.16 2000-02-22 16:41:46 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

22nd February 2000  Evgeni Chernaev (greps-V01-00-03)
- Re-instated edge flags for "invisible" edges of HepPolyhedronCons and Torus.

22nd February 2000  John Allison  (greps-V01-00-02)
- Added HepPolyhedron (Evgeni Chernaev).  Re-implemented G4Polyhedron.

11th January 2000  John Allison  (greps-V01-00-01)
- Fix for spheres with small dtheta.

16th December 1999  John Allison (greps-V01-00-00)
- Added G4Polyhedron::Transform and G4Polyhedron::InvertFacets (Evgeni
  Chernaev).

17th November 1999 Satoshi Tanaka (greps-V00-01-01)
- Header comments for software reference manual

4th October 1999  John Allison  (greps-V00-01-00)
- Improved comments in G4Visible.hh.

23rd July 1999  John Allison
- Added base class copy to copy contructor of G4Polyhedron.

21st July 1999  John Allison
- Added G4PlacedPolyhedron, which includes G4PlacedPolyhedronList.

greps-01-00-08  5th June John Allison
- Added virtual operator = and overrides to G4Circle and G4Square.

greps-01-00-07  25th May 1999  John Allison
- Moved operator != to member function.

greps-01-00-06  19th May 1999  John Allison