@@ -1,4 +1,4 @@
-$Id: History,v 1.16 2000-02-22 16:41:46 johna Exp $
+$Id: History,v 1.17 2000-02-23 16:57:30 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+23rd February 2000  John Allison
+- Moved G4Polyhedron constructors and destructor to .cc.
 
 22nd February 2000  Evgeni Chernaev (greps-V01-00-03)
 - Re-instated edge flags for "invisible" edges of HepPolyhedronCons and Torus.
